# FarmU_Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-prod.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_unions_and_users.py  002_add_dashboard_and_member_tables.py  003_add_shipping_tables.py  004_add_mvp_feature_tables.py  005_frontend_contract_alignment.py
deploy/: Caddyfile
docs/: API_SPEC.md  DEPLOY_EC2.md
src/: account_models.py
src/auth/application/dto/: commands.py  results.py
src/auth/application/service/: auth_service.py
src/auth/domain/: exception.py
src/auth/domain/model/: role.py  user.py  vo.py
src/auth/domain/repository/: user_repository.py
src/infrastructure/ai/: gemini_client.py  router.py
src/infrastructure/cache/: redis.py
src/infrastructure/celery/: app.py
src/infrastructure/database/: session.py
src/main/: api_docs.py  app.py  config.py  exception_handlers.py  response_schema.py
src/member/application/service/: member_service.py
src/performance/application/service/: dashboard_service.py
src/performance/domain/: exception.py
src/shared/adapter/: exception_handler.py
src/shared/application/: ids.py
src/shared/domain/: exception.py
src/shipping/application/service/: shipping_service.py
src/shipping/domain/: exception.py
tests/: conftest.py
tests/integration/member/: test_member_api.py
tests/integration/mvp/: test_mvp_api.py
tests/integration/performance/: test_dashboard_api.py
tests/integration/shipping/: test_shipping_api.py
tests/unit/main/: test_api_contract.py
tests/unit/member/: test_member_service.py
tests/unit/performance/: test_dashboard_service.py
tests/unit/shipping/: test_shipping_service.py
(+36 files in other folders)
