[tool.poetry]
name = "farmu-server"
version = "0.1.0"
description = "FarmU Backend API Server - 농업 성과 관리 플랫폼"
authors = ["FarmU Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }

# Database
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
geoalchemy2 = "^0.15.0"

# Auth
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

# Config / Env
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

# AI / ML
scikit-learn = "^1.6.0"
lightgbm = "^4.5.0"
shap = "^0.46.0"
prophet = "^1.1.6"
numpy = "^2.2.0"
pandas = "^2.2.0"

# Async Tasks
celery = { version = "^5.4.0", extras = ["redis"] }
redis = { version = "^5.2.0", extras = ["asyncio"] }

# HTTP Client
httpx = "^0.28.0"

# Utilities
python-multipart = "^0.0.20"
orjson = "^3.10.0"
structlog = "^24.4.0"

# AWS
boto3 = "^1.35.0"
greenlet = "^3.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "PT", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
